<resources>
    <string name="app_name">TaroTraining</string>
    <string name="alignment">Расклады</string>
    <string name="test">Тест</string>
    <string name="title">Taro Training</string>
    <string name="text_future_alignment">Расклад на будущее</string>
    <string name="text_love_alignment">Любовный расклад</string>
    <string name="next">Далее</string>
    <string name="choice_сard">Выбор карты сигнитификатора</string>
    <string name="scan_card">Сканировать карту</string>
    <string name="mix_deck">Перемешайте колоду и разложите карты по схеме:</string>
    <string name="result_scan">Результат сканирования</string>
    <string name="scan_next_card">Сканировать дальше</string>
    <string name="cancel">Завершить</string>
    <string name="future_title">Расклад на будущее</string>
    <string name="future_describe">Что ждет вас в этом году? Как лучше действовать? Расклад расскажет какими будут ближайшие 12 месяцев.</string>
    <string name="love_describe">Расклад расскажет о том, как ваш партнер относится к вам в качестве супруги или супруга. Что перпятствует вашей свадьбе, а что способствует ей.</string>
    <string name="describe_card">Карту-сигнификатор выбирают из шестнадцати Старших Арканов. </string>
    <string name="parametr">Распределение выполняется по следующим параметрам:</string>
    <string name="jezl"><b>Масть Жезлов</b> – подойдет для светлокожих блондинов либо рыжеволосых;</string>
    <string name="chasha"><b>Масть Чаш</b> – просто для людей со светлыми волосами;</string>
    <string name="mech"><b>Масть Мечей</b> – используется для брюнетов;</string>
    <string name="pentacl"><b>Масть Пентаклей</b> – этот вариант приемлем для смуглых или очень темноволосых людей.</string>
    <string name="eczarExtraBold">fonts/Eczar-ExtraBold.ttf</string>
    <string name="robotoMedium">fonts/robotoMedium.ttf</string>
    <string name="robotoRegular">fonts/robotoRegular.ttf</string>
    <string name="textCorrectScore">У вас %1$s из %2$s правильных ответов</string>
    <string name="choose_your_figther">Choose your figther!</string>
    <string name="decryption_test">Тест на расшифровку</string>
    <string name="test_name">Тест на название карт</string>
    <string name="circuit_test">Тест на схему раскладов</string>
    <string name="tes_knowledge_spread">Тест на знание раскладов</string>
    <string name="confirm_answer">Подтвердить ответ</string>
    <string name="back_main">Вернуться на главное меню</string>
    <string name="result">Результат</string>
    <string name="point">Очки</string>

    <string name="the_fool">Шут</string>
    <string name="the_magician">Маг</string>
    <string name="the_high_priestess">Верховная Жрица</string>
    <string name="the_empress">Императрица</string>
    <string name="the_emperor">Император</string>

    <string name="the_fool_value">Шут - символ новых начинаний и приключений, удовольствия, страсти, беспечности и стремительности. Подобно Шуту и вы, возможно, стоите на краю пропасти, вглядываясь в неизвестность; и в данном случае, вы можете либо предаться необдуманному стремлению совершить прыжок в неизвестность, что бы получить драгоценный опыт, либо храбро устремиться на поиски приключений, с глубокой верой и знанием, что вас приведут и направят туда, куда нужно. В любом случае, сейчас перед вами открываются неограниченные возможности.</string>
    <string name="the_magician_value">Оригинальность, творческий потенциал, умение, сила воли, самоуверенность, ловкость и изящность рук. Это способность ухватить невидимое вокруг нас и преобразовать его в реальность. Маг на карте изображен среди элементов природы: Огонь - это его фонарь, голос Моря - ракушка, дыхание Ветра - перо ворона и Земля - это листья.</string>
    <string name="the_high_priestess_value">Мудрость, знание, изучение, интуиция, чистота, добродетель. Сова - хранительница знания и она носит ключ, который может открыть тайну. Гранат – символ Персефоны, которая попробовала семя этого фрукта и потом связала себя брачными узами с Аидом - это плод изобилия и смерти; луна, вышитая на ее одеянии, изображена возрастающей и убывающей. Два полумесяца, показывающие разные фазы луны, создают полный цикл.</string>
    <string name="the_empress_value">Творческий потенциал, обучение, изобилие, плодородие, понимание скрытого смысла и использование даров природы.</string>
    <string name="the_emperor_value">Создание порядка из хаоса, полномочия, лидерство, сила, установление правопорядка, структура. Позади Императора, на стене, вырезблены символы, которые несут значение власти и суверенитета. Орел возвышается над горами и морем, сменой дня и ночи, и над всеми земными существами внизу. Но, не смотря на то, что образы вырезанных персонажей на столько величественны, все же стена позади – это искусственное сооружение, людская мера и средство управления диким миром, в попытке вырезать их на стабильной основе в виде камня. Император - это мужчина, который твердо уверен в своем пути, взглядах и системе ценностей, он считает, что это наше право и путь развития.</string>


</resources>