<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:gravity="center_horizontal"
        android:paddingTop="100dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/click_button"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView

        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:textAlignment="center"
        android:textColor="@color/click_button"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView7" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/correctTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="100dp"
        android:text="@string/point"
        android:textAlignment="center"
        android:layout_marginTop="48dp"
        android:textColor="@color/click_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentTextView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/restartSchemaTestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button"
        android:gravity="center"
        android:onClick="onFutureChoice"
        android:text="@string/back_main"
        android:textColor="@color/text_button"
        android:textSize="14sp"
        app:cornerRadius="30dp"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="68dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>