<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Test">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/transcriptTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:background="@color/button"
        android:gravity="center"
        android:onClick="onTranscriptTestClick"
        android:shadowColor="@color/click_button"
        android:shadowDx="2"
        android:shadowDy="5"
        android:text="@string/decryption_test"
        android:textColor="@color/text_button"
        android:textSize="14sp"
        app:cornerRadius="30dp"
        app:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/click_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nameTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/button"
        android:gravity="center"
        android:onClick="onNameTestClick"
        android:shadowColor="@color/click_button"
        android:shadowDx="2"
        android:shadowDy="5"
        android:text="@string/test_name"
        android:textColor="@color/text_button"
        android:textSize="14sp"
        app:cornerRadius="30dp"
        app:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transcriptTest"
        app:rippleColor="@color/click_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/situationSchemaTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/button"
        android:gravity="center"
        android:onClick="onSituationSchemaTestClick"
        android:shadowColor="@color/click_button"
        android:shadowDx="2"
        android:shadowDy="5"
        android:text="@string/circuit_test"
        android:textColor="@color/text_button"
        android:textSize="14sp"
        app:cornerRadius="30dp"
        app:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTest" />

</androidx.constraintlayout.widget.ConstraintLayout>